--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,2 +1,14 @@
+ANDROID:
+  HOST: 192.168.0.34
+  MESSAGE: Fire Detection
+  PHONE_NUMBER: '+821083067118'
+  PORT: 5000
 PI:
+  HOST: 192.168.1.11
   FILE_PATH: /home/raspberry/purethermal/utils/static/
+  PORT: 5000
+TWILIO:
+  FROM_NUM: '+12513103845'
+  SID: {SID}
+  TOKEN: {TOKEN}
+  TO_NUM: '+821074037133'
